--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
 }
 body{
-    background-color: rgb(33, 31, 31);
+    background-color: black;
     color: bl;
 }
 #head{
@@ -21,12 +21,16 @@ body{
 }
 
 nav{
+
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
-    background-color: rgb(48, 46, 46);
-    
+    background-color: #302e2f;
+   
+    position: fixed;
+    top: 0;
+    width: 100%;
 }
 nav img{
     height: 30px;
@@ -103,9 +107,10 @@ nav ul li a:hover{
 
 }
 .homeimg img:hover{
-    box-shadow: 0 0 50px rgb(193, 75, 42) ;
+    box-shadow: 0 0 40px rgb(154, 54, 27) ;
 }
 .home{
+    margin-top: 45px;
     width: 100%;
     min-height: 90vh;
     display: flex;
@@ -114,7 +119,7 @@ nav ul li a:hover{
     gap: 4em;
     
 }
-.ic{
+/* .ic{
     margin-left:50px;
     display: inline-flex;
     justify-content: center;
@@ -128,7 +133,7 @@ nav ul li a:hover{
      color: rgb(193, 75, 42);
      text-decoration: none;
      margin: 30px 15px 30px 50px;
-}
+} */
 .res{
     text-decoration: none;
     color: rgb(193, 75, 42) ;
@@ -142,10 +147,62 @@ nav ul li a:hover{
     overflow: hidden;
 }
 
+.icon{
+    margin-top:30px;
+    margin-left: 40px;
+}
 .icon a:hover{
     background: rgb(211, 106, 77);
     color: white ;
     box-shadow: 0 0 20px rgb(193, 75, 42);
 }
+.col1 img{
+    margin-top: 30px;
+    margin-left: 30px;
+    height: 400px;
+    border-radius: 20px;
+    box-shadow: 30px;
+    box-shadow: 0 0 60px grey;
+   
+}
+.col1 img:hover{
+    box-shadow: 0 0 30px  rgb(211, 106, 77) ;
+}
+#about {
+    background-image:url(
+  );
+    
+}
+.sec2{
+    margin-top: 60px;
+    margin-left: 50px;
+    margin-bottom: 50px;
+}
+.row{
+    display: flex;
+    gap: 150px;
+   
+}
+.col2{
+    width: 600px; 
+}
+.heading{
+    margin-top: 40px;
+    font-size: 40px;
+    font-weight: 150px;
+    color: white;
+}
+span{
+    color:rgb(193, 75, 42) ;
+}
+hr.line{
+    border: 1px  solid rgb(122, 41, 19);
+}
+
+.col2{
+    color:white;
+   font-family: 'Courier New', Courier, monospace;
+}
+
 
 
