--- a/styles.css
+++ b/styles.css
@@ -204,5 +204,48 @@ hr.line{
    font-family: 'Courier New', Courier, monospace;
 }
 
+.skills{
+    background-image:url(https://images.unsplash.com/photo-1588345921523-c2dcdb7f1dcd?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D) ;
+}
+.title span{
+    color: black;
+}
+.title{
+    color: rgb(193, 75, 42);
+    padding: 20px;
+}
+.sklist{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+    grid-gap: 30px;
+    margin-top: 50px;
+   
+}
+.sklist div{
+    background-color:#2f2f2f4e ;
+    padding: 40px;
+    font-size: 13px;
+    margin-bottom: 40px;
+    border-radius: 10px;
+    margin-left: 10px;
+    margin-right:10px ;
+    transition: background 1s,transform 0.5s;
+}
+.sklist div i{
+    font-size: 30px;
+    margin-bottom: 5px ;
+}
+.sklist div h3{
+    font-size: 20px;
 
+}
+.sklist div:hover{
+    background: linear-gradient(rgb(255, 255, 255),rgb(193, 75, 42)) ;
+    overflow: hidden;
+    transform: translateY(-10px);
+
+}
+.contact{
+    color: white;
+}
 
