--- a/styles.css
+++ b/styles.css
@@ -232,8 +232,10 @@ hr.line{
     transform: translateY(-10px);
 
 }
-/* #project{
+#project{
     background-image:url(https://images.unsplash.com/photo-1588345921523-c2dcdb7f1dcd?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D) ;
+    width: 100%;
+    height: 100%;
 }
 .prj{
     color: rgb(193, 75, 42);
@@ -242,7 +244,35 @@ hr.line{
 }
 .prj span{
     color: black;
-} */
+}
+.prjlist{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 50px 100px;
+
+}
+.netf h3{
+    font-size: 30px;
+}
+.netf p{
+    color:rgb(193, 75, 42) ;
+    text-decoration: underline;
+}
+
+.netf a{
+    background: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.2));
+}
+.netf a:hover{
+    background: black;
+}
+.netf img{
+    width: 400px;
+    height: 300px;
+    padding: 30px 0;
+    cursor: pointer;
+}
+
 #contact{
     color: white;
     
@@ -473,6 +503,30 @@ form input,form textarea{
         justify-content: center;
         
     }
+    
+    .sec5{
+        width: 100vw;
+        height: 100%;
+    }
+    .prj{
+        margin-left: 25%;
+    }
+
+    .prjlist{
+       padding: 1em 2em;
+    }
+    .netf h3{
+        font-size:1em ;
+    }
+    .netf p{
+        font-size: 0.6em;
+    }
+    .netf img{
+        width: 9em;
+        height: 11em;
+    }
+
+
 
   
 
